@@ -28,6 +28,8 @@ dpkg (1.19.0) UNRELEASED; urgency=medium
     - Only load Dpkg::BuildOptions and Dpkg::Arch from Dpkg::Vendor-specific
       modules if we are going to use them, reducing the load time of many
       other modules.
+    - Only load Term::ANSIColor from Dpkg::ErrorHandling if we are going to
+      use colors, reducing the load time of many other modules.
   * Documentation:
     - Document currently accepted syntax for changelogs in deb-changelog(5).
       Closes: #858579
